--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <span class="border"><a href="https://moomanmen.github.io/project-5" target="_blank">Project 5</a></span><br>
     <span class="border"><a href="https://moomanmen.github.io/project_6" target="_blank">Project 6</a></span>
   </div>
+  <div class=logo>MooManMen</div>
 </div>
 
 <p style="padding:5px 15px">This is moomanmen's gethub pages collection</p>
@@ -26,8 +27,14 @@
 
 </body>
 </html>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+
   
-  
+
+    <script  src="js/index.js"></script>
+
+
+
 
 </body>
 
